Fix: Buttons on mobile

--- a/index.css
+++ b/index.css
@@ -58,9 +58,9 @@ button {
 
 @media only screen and (max-width: 768px) {
     body {
-      font-size: 2em;
+      font-size: 1em;
     }
     button {
-        width: 400px;
+        max-width: 150px;
     }
 }
